--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 
     <body>
         <p><h1>Odin Recipes</h1></p>
-        <p><a href="recipes/lasagna.html">Lasagna</a></p>
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/risotto.html">Risotto</a></li>
+            <li><a href="recipes/grilledchicken.html">Grilled chicken</a></li>
+        </ul>
+
         
     </body>
 </html>
