--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <head>
         <meta charset="UTC-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <p><h1>Odin Recipes</h1></p>
+        <div class="title"><p><h1>Odin Recipes</h1></p></body></div>
         <ul>
-            <li><a href="recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="recipes/risotto.html">Risotto</a></li>
-            <li><a href="recipes/grilledchicken.html">Grilled chicken</a></li>
+            <li id="lasagna"><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li id="risotto"><a href="recipes/risotto.html">Risotto</a></li>
+            <li id="grilledchicken"><a href="recipes/grilledchicken.html">Grilled chicken</a></li>
         </ul>
 
         
